adding benchmark py code.